src/index.css
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: "shojumaru-regular";
    src: url("../fonts/Shojumaru-Regular.ttf");
  }
  
  @font-face {
    font-family: "vastShadow-regular";
    src: url("../fonts/VastShadow-Regular.ttf");
  }

  @font-face {
    font-family: "martianMono-regular";
    src: url("../fonts/MartianMono.ttf");
  }

@layer utilities {
    .custom-scrollbar::-webkit-scrollbar {
        width: 20px;
        /* height: 11px; */
    }

    .custom-scrollbar::-webkit-scrollbar-track {
        background-color: dimgray;
    }

    .custom-scrollbar::-webkit-scrollbar-thumb {
        background-color: rgba(255, 255, 255, 0.114);
        border-radius: 8px;
    }

    .custom-scrollbar::-webkit-scrollbar-thumb:hover {
        background-color: rgba(255, 255, 255, 0.25);
    }
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Nunito', sans-serif;
    background-color: #000;
    color: antiquewhite;
    text-align: center;
}

textarea,
input {
    background-color: dimgrey;
    color: whitesmoke;
    font-size: larger;
    font-weight: bolder;
}

.hide-scrollbar::-webkit-scrollbar {
    display: none;
}

.next-btn, 
.prev-btn {
    height: 450px;
    align-self: center;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 101px;
}

.next-btn:hover, 
.prev-btn:hover {
    background-color: rgb(24, 24, 24);
    font-weight: bold;
}

/* dissolving text in intro */

.dissolve-text {
    animation-timing-function: ease-in-out;
    animation-duration: 4s;
    animation-iteration-count: 1;
    animation-delay: 1s;
    animation-direction: alternate;
    animation-fill-mode: forwards;
    animation-name: dissolve;
}

@keyframes dissolve {
    from {
        filter: blur(0px);
    }

    to {
        filter: blur(40px);
    }
}

.reappear-text {
    animation-timing-function: ease-in-out;
    animation-duration: 4s;
    animation-iteration-count: 1;
    animation-delay: 0s;
    /* animation-direction: alternate; */
    animation-fill-mode: backwards;
    animation-name: reappear;
}

@keyframes reappear {
    from {
        filter: blur(40px);
    }

    to {
        filter: blur(0px);
    }
}

/* animation for blinking cursor */
.test1234::after {
    content: "";
    position: absolute;
    right: -22px;
    width: 20px;
    height: 4px;
    bottom: 0;
    background-color: maroon;
    display: inline-block;
    animation: alternate infinite .2s blink-cursor;
}

@keyframes blink-cursor {
    from {
        opacity: 0;
    }

    to {
        opacity: 100;
    }
}

/* text in div background */
.container {
    position: relative;
}

.containerbackground {
    margin: 3rem;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    z-index: -1;
    transform: rotate(300deg);
    /* -webkit-transform: rotate(300deg); */
    color: #c6afaf;
}

.quotes__ql::before,
.quotes__qr::after {
    content: attr(content);
    position: absolute;
    font-size: 40px;
    font-size: 4rem;
}

.quotes__ql::before {
    margin-right: 11px;
    top: -4px;
    left: -27px;
}

.quotes__qr::after {
    margin-left: 27px;
    margin-top: 35px;
}

.pattern {
    background-image: repeating-linear-gradient(-45deg, rgba(255, 255, 255, 0.114), rgba(255, 255, 255, 0.25) 1px, transparent 1px, transparent 6px);
    animation: infinite alternate-reverse 4s 20s changeSize;
}

@keyframes changeSize {
    from {
        background-size: 27px 42px;
    }

    to {
        background-size: 29px 42px;
    }
}

/* for projects items animation */
.hideNow {
    opacity: .4;
    filter: blur(6px);
    /* transform: translateX(-100%); */
    transition: all 600ms;
}

.stackNow {
    transition: all 600ms;
    transform: translateX(-60%);
}

.stackNow .stackElem:nth-child(2n) {
    transition-delay: 400ms;
}

.stackNow .stackElem:nth-child(2n + 1) {
    transition-delay: 600ms;
}

.stacking {
    /* transition: all 600ms; */
    transform: translateX(-40%);
}

.stacking:nth-child(2) {
    transition-delay: 100ms;
}

.stacking:nth-child(3) {
    transition-delay: 200ms;
}

.stacking:nth-child(4) {
    transition-delay: 300ms;
}

.stacking:nth-child(5) {
    transition-delay: 400ms;
}

@media(prefers-reduced-motion) {
    .hideNow, .stackNow, .stacking {
        transition: none;
    }
}

.show {
    filter: blur(0);
    /* transform: translateX(0); */
    opacity: .81;
}

.reveal {
    transform: translateX(0);
}


.animated-text {
    /* background-image: -webkit-linear-gradient(Red 50%, Lime 50%); */
    background-image: linear-gradient(to right, Red, Lime);
    background-size: 100% 50px;
    -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
    background-clip: text;
    /* -webkit-animation: stripes 2s linear infinite; */
    /* animation: stripes 2s linear infinite; */
    /* font-size: 100px; */
  }
  
  @-webkit-keyframes stripes {
    100% {
      background-position: 0 -50px;
    }
  }
  
  @keyframes stripes {
    100% {
      background-position: 0 -50px;
    }
  }

